<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_matcher"
            android:icon="@drawable/ic_glove"
            android:title="@string/matcher" />
        <item
            android:id="@+id/nav_träningar"
            android:icon="@drawable/ic_fight"
            android:title="@string/träningar" />
        <item
            android:id="@+id/nav_schema"
            android:icon="@drawable/ic_calender"
            android:title="@string/visaEvent" />
    </group>

    <item android:title="@string/kommunikation">
        <menu>
            <item
                android:id="@+id/nav_tavla"
                android:icon="@drawable/community"
                android:title="@string/anslagstavla" />

        </menu>
    </item>

</menu>
