<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Matchboxare.WorkoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publikaTräningspass"
            android:gravity="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/visa"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/rubrik2"
            android:layout_marginLeft="@dimen/rubrik2"
            android:layout_height="wrap_content"
            android:text="@string/visa" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/egnaTräningpass"
            android:gravity="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/skapade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/rubrik2"
            android:layout_marginRight="@dimen/rubrik2"
            android:text="@string/skapadeTräningspass" />

        <Button
            android:id="@+id/skapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rubrik"
            android:layout_marginRight="@dimen/rubrik2"
            android:layout_marginLeft="@dimen/rubrik2"
            android:text="@string/skapaNyPass" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bkfalkenbild" />

</LinearLayout>