<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:background="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/excercize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/rubrik"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/rubrik2"
                android:gravity="center"
                android:text="@string/header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/startWorkout"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:text="@string/startaTräning" />

                <Button
                    android:id="@+id/deleteWorkout"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tabort" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>






</LinearLayout>