<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Coach.SharedWorkout">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:text="@string/skapaTräningsPass" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/hopprep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/choice"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:entries="@array/workoutForms" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/antal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/ronder"
                            android:ems="10"
                            android:hint="@string/ronder"
                            android:inputType="numberSigned"
                            tools:text="@string/ronder" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/repSetter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/add" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rubrik"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rubrik"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/NamnTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/namn"
                android:inputType="textPersonName"
                tools:text="@string/namn" />

            <Button
                android:id="@+id/namnSetter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spara" />
        </LinearLayout>
    </LinearLayout>